fe/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mentorplatform
  labels:
    name: mentorplatform
